--- a/Omnifood/css/style.css
+++ b/Omnifood/css/style.css
@@ -1,4 +1,4 @@
-/****HERO COMPONENTS ****/
+/****HERO SECTION****/
 
 .section-hero {
 	background-color: #fdf2e9;
@@ -78,7 +78,7 @@
 .main-nav-list {
     list-style: none;
     display: flex;
-    gap: 3.2rem;
+    gap: 4.8rem;
     align-items: center;
 }
 
