--- a/Omnifood/css/style.css
+++ b/Omnifood/css/style.css
@@ -65,6 +65,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #fdf2e9;
+    position: relative;
 
     /*** To make it sticky ***/
     height: 9.6rem;
@@ -106,6 +107,24 @@
 .main-nav-link.nav-cta:hover, 
 .main-nav-link.nav-cta:active {
     background-color: #cf711f;
+}
+
+.btn-mobile-nav {
+    border: none;
+    background: none;
+    cursor: pointer;
+
+    display: none;
+}
+
+.icon-mobile-nav {
+    height: 4.8rem;
+    width: 4.8rem;
+    color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+    display: none;
 }
 
 /****FEATURED IN SECTION ****/
