--- a/Portfolio/css/queries.css
+++ b/Portfolio/css/queries.css
@@ -10,6 +10,7 @@
         text-align: center;
         display: flex;
         flex-direction: column;
+        background-color: #ACC8E5;
     }
 
     .main-nav {
