--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -43,6 +43,7 @@
 .links-tab {
     background-color: #ACC8E5;
     padding: 0.8rem;
+    padding-bottom: 1.6rem;
     display: none;
 }
 
@@ -60,7 +61,7 @@
 
 .section-info {
 	background-color: #fdf2e9;
-	padding: 4.8rem 0 0 0;
+	padding: 3.2rem 0 0 0;
     font-size: 1.5rem;
     align-content: center;
 }
