--- a/Portfolio/css/queries.css
+++ b/Portfolio/css/queries.css
@@ -19,6 +19,9 @@
     .header {
         justify-content: center;
     }
+    .bookshelf {
+        grid-template-columns: 1fr;
+    }
 }
 
 @media(max-width: 41em) {
